# ecgtools

./: .pre-commit-config.yaml  pyproject.toml  versioneer.py
.github/workflows/: ci.yaml  pypi-release.yaml
ci/: environment-docs.yml  environment-upstream-dev.yml  environment.yml
ecgtools/: __init__.py  _version.py
tests/: test_builder.py
